src/regression/parse_pool/libtest2.sfp.out

sfc in library: parse_pool/libtest2.sfl
syntax error at 2 at line:
use aplication blink $(FENNEC_FOX_LIB)/Application/SimpleBlink
    ^
